portfolio.html setup

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ a, a:visited, a:hover, a:active {
 }
 
 body {
-    height: 100%;
+    height: auto;
 }
 
 form {
@@ -14,7 +14,7 @@ form {
     position: relative;
 }
 
-input {}
+input {
     padding: .5em 0em .5em 0em;
 }
 
@@ -83,11 +83,13 @@ input {}
     background-color: #ffffff;
     color: #777777;
     line-height: 2em;
+    display:flex;
+    flex-wrap: wrap;
 }
 
 #footer {
     background: #666666;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     height: 5em;
     width: 100%;
@@ -96,7 +98,7 @@ input {}
 
 #footerText {
     background: #666666;
-    position: absolute;
+    position: fixed;
     bottom: 1em;   
     color: #ffffff;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; 
@@ -106,6 +108,24 @@ input {}
     margin-right:auto;
 }
 
+.portfolioShortcut {
+    width: 320px;
+    height: 240px;
+    background-size: 320px 240px;
+    color: #ffffff;
+    margin: 1em 2em 1em 0em;
+    flex:none;
+}
+
+.shortcutTitle {
+    background-color: #4aaaa5;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    font-size: 2em;
+    text-align: center;
+    margin-top: 5em;
+    box-sizing: border-box;
+    padding: .5em 0em .5em 0em;
+}
 
 .clearfix::after {
     content: "";
